fix: change the z-index or the to-top button so that the other buttons are active

--- a/src/styles.css
+++ b/src/styles.css
@@ -288,10 +288,10 @@ grid-template-columns: repeat(autofit, minmax(50px, 1fr));
 .arrow-up{
 display: flex;
 position:fixed;
-bottom:22%;
+bottom:28%;
 padding: 0 0.4rem;
 width: 1440px;
-z-index:9999;
+z-index:8000;
 justify-content: end;
 @media (width < 1100px){
   width: 80px;
